--- a/block-BJaaek/code/index.html
+++ b/block-BJaaek/code/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="box second">
           <div class="text">
-            <p class="banner">
+            <p class="banner1">
               Move Your Mouse
             </p>
           </div>
