--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -12,7 +12,14 @@
   </head>
   <body>
     <h1>🤯 Calculator 🤩</h1>
+    
+    <div class="container">
+
+      <div class="box1"></div>
+
+    </div>
 
     <script src="./script.js"></script>
   </body>
 </html>
+  
