--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -11,13 +11,35 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
     <h1>🤯 Calculator 🤩</h1>
     
-    <div class="container">
+    <main class="container flex">
+      
+      <section class="result"></section>
 
-      <div class="box1"></div>
+      <button class="clear">C</button>
+      <button class="">CE</button>
+      <button class="">%</button>
+      <button class="">/</button>
+      <button class="">7</button>
+      <button class="">8</button>
+      <button class="">9</button>
+      <button class="">*</button>
+      <button class="">4</button>
+      <button class="">5</button>
+      <button class="">6</button>
+      <button class="">-</button>
+      <button class="">1</button>
+      <button class="">2</button>
+      <button class="">3</button>
+      <button class="">+</button>
+      <button class="">mode</button>
+      <button class="">0</button>
+      <button class="">.</button>
+      <button class="equal">=</button>
 
-    </div>
+      <main>
 
     <script src="./script.js"></script>
   </body>
