--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -18,7 +18,6 @@
             placeholder="Enter your name"
           />
         </div>
-        
         <div class="form-control">
           <label for="email">Your Email:</label>
           <input
@@ -28,10 +27,9 @@
             placeholder="Enter your email"
           />
         </div>
-
         <div class="form-control">
           <label for="movies">What do you love?</label>
-          <select id="gender" name="gender">
+          <select id="gender" name="choice">
             <option value="movies">Movies</option>
             <option value="series">Series</option>
             <option value="others">Others</option>
@@ -43,11 +41,10 @@
           <input
             id="color"
             type="color"
-            name="email"
+            name="color"
             placeholder="Enter your email"
           />
         </div>
-
         <div class="form-control">
           <label for="range"> Rate the movie Inception out of 10 </label>
           <input
@@ -55,11 +52,10 @@
             type="range"
             max="10"
             step="1"
-            name="email"
+            name="range"
             placeholder="Enter your email"
           />
         </div>
-
         <div class="form-control">
           <label>Book genre you love?</label>
 
@@ -93,7 +89,6 @@
           <input type="checkbox" id="terms" name="terms" />
           <label for="terms">I Agree to Terms</label>
         </div>
-        
         <button type="submit">Submit</button>
       </form>
     </div>
