--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -91,7 +91,13 @@
         </div>
         <button type="submit">Submit</button>
       </form>
+
+      <div class="modal">
+
+      </div>
+
     </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
