--- a/block-BJaaet/code/index.html
+++ b/block-BJaaet/code/index.html
@@ -6,6 +6,11 @@
     <title>Movie Watch List</title>
   </head>
   <body>
+    <form action="">
+      <h1>Movie Watching List</h1>
+
+      enter 
+    </form>
     <script src="./script.js"></script>
   </body>
 </html>
