--- a/block-BJaaev/code/index.html
+++ b/block-BJaaev/code/index.html
@@ -22,6 +22,12 @@
             </ul>
           
     </div>
+    <footer> 
+      <button class="all">All</button>
+      <button class="active">Active</button>
+      <button class="completed">Completed</button>
+      <button class="clear">Clear Completed</button>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
