--- a/block-BJaaew/code/index.html
+++ b/block-BJaaew/code/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main class="container">
+      <h1>People Of Got</h1>
+      <div class="bigbox">
+          <div class="box"></div>
+      </div>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
+    </main>
   </body>
 </html>
+
