--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -15,32 +15,30 @@
     <h1>🤯 Calculator 🤩</h1>
     
     <main class="container flex">
-      
       <section class="result"></section>
 
-      <button class="clear">C</button>
-      <button class="">CE</button>
-      <button class="">%</button>
-      <button class="">/</button>
+      <button class="color">+</button>
+      <button class="color">-</button>
+      <button class="color">/</button>
+      <button class="color">*</button>
       <button class="">7</button>
       <button class="">8</button>
       <button class="">9</button>
-      <button class="">*</button>
+      <button class="color">%</button>
       <button class="">4</button>
       <button class="">5</button>
       <button class="">6</button>
-      <button class="">-</button>
+      <button class="color">.</button>
       <button class="">1</button>
       <button class="">2</button>
       <button class="">3</button>
-      <button class="">+</button>
-      <button class="">mode</button>
+      <button class="clear color">C</button>
+      <button class="clear color">M</button>
       <button class="">0</button>
-      <button class="">.</button>
-      <button class="equal">=</button>
+      <button class="clear color">CE</button>
+      <button class="equal color">=</button>
 
       <main>
-
     <script src="./script.js"></script>
   </body>
 </html>
